# CustomTobii4cTracker

./: README.md  pyproject.toml
CustomTobii4cTracker/: __init__.py  custom_tobii4c_tracker.py  event.py  image_processor.py  utils.py  window_capture.py
