[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CustomTobii4cTracker"
version = "0.0.1"
dependencies = [
  "opencv-python==4.11.0.86",
  "async-timer==1.1.6",
  "pywin32==305.1",
  "pywin32-ctypes",
]
requires-python = ">=3.10"
authors = [
  {name = "Max Koniaev", email = "konyaevmaksim88@gmail.com"},
]
description = "Small library for window that helps to get eye tracking with Tobii 4C in to your project"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["tobii", "eye tracker"]
